<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">


    <TextView
        style="@style/aboutHeader"
        android:text="@string/bike_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/bike_data_url"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <TextView
        android:text="@string/range_bar"
        style="@style/aboutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/range_bar_url"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/aboutHeader"
        android:text="@string/material_dialogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/material_dialogs_url"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/aboutHeader"
        android:text="@string/roboto_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/roboto_text_view_url"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <TextView
        style="@style/aboutHeader"
        android:text="@string/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/icons_attr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="5dp"
        android:text="@string/icons_attr2"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/aboutHeader"
        android:text="@string/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/version"
        android:paddingTop="5dp"
        android:text="@string/version"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>